--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,20 @@
 --- #YAML:1.0
-name:                URI-Escape-XS
-version:             0.04
-abstract:            Drop-In replacement for URI::Escape
-license:             ~
-author:              
+name:               URI-Escape-XS
+version:            0.05
+abstract:           Drop-In replacement for URI::Escape
+author:
     - Dan Kogai <dankogai@dan.co.jp>
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
-    Test::More:                    0
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Test::More:  0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
