Import of DANKOGAI/URI-Escape-XS-0.06 from CPAN.
gitpan-cpan-distribution: URI-Escape-XS
gitpan-cpan-version:      0.06
gitpan-cpan-path:         DANKOGAI/URI-Escape-XS-0.06.tar.gz
gitpan-cpan-author:       DANKOGAI
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               URI-Escape-XS
-version:            0.05
+version:            0.06
 abstract:           Drop-In replacement for URI::Escape
 author:
     - Dan Kogai <dankogai@dan.co.jp>
@@ -8,13 +8,15 @@ license:            unknown
 distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
     Test::More:  0
 no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
