--- a/META.yml
+++ b/META.yml
@@ -1,22 +1,22 @@
---- #YAML:1.0
-name:               URI-Escape-XS
-version:            0.08
-abstract:           Drop-In replacement for URI::Escape
+---
+abstract: 'Drop-In replacement for URI::Escape'
 author:
-    - Dan Kogai <dankogai@dan.co.jp>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Dan Kogai <dankogai@dan.co.jp>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Test::More:  0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: URI-Escape-XS
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Test::More: 0
+version: 0.09
