--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,13 @@
 ---
 abstract: 'Drop-In replacement for URI::Escape'
 author:
-  - 'Dan Kogai <dankogai@dan.co.jp>'
+  - 'Dan Kogai <dankogai+cpan@gmail.com>'
 build_requires:
   ExtUtils::MakeMaker: 0
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,4 +19,4 @@ no_index:
     - inc
 requires:
   Test::More: 0
-version: 0.09
+version: 0.10
